package Model.Enums;

public enum NivelDeGravedad {

    BAJA, 
    MEDIA, 
    ALTA,

}
