package Model.Enums;

public enum TipoEmergencia {

    INCENDIO, 
    ACCIDENTE_VEHICULAR, 
    ROBO,

}
